[package]
name = "use-gpu-text"
version = "0.1.0"
authors = ["Steven Wittens <steven@acko.net>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
ab_glyph = "0.2.15"
console_error_panic_hook = { version = "0.1.6", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde-wasm-bindgen = "0.4.2"
wasm-bindgen = "0.2.63"
wee_alloc = { version = "0.4.5", optional = true }
xi-unicode = "0.3.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
