[package]
name = "use-gpu-text"
version = "0.1.0"
authors = ["Steven Wittens <steven@acko.net>"]
description = "Rust-side of @use-gpu/glyph"
license = "./LICENSE.md"
repository = ""
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
ab_glyph = "0.2.28"
console_error_panic_hook = { version = "0.1.7", optional = true }
png = "0.17.13"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde-wasm-bindgen = "0.4.5"
wasm-bindgen = { version = "0.2.93", features = ["serde"] }
xi-unicode = "0.3.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.43"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
